# saveddit

./: .gitignore  pyproject.toml
src/saveddit/: submission_downloader.py
